ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.6.6, 2.7.7
    • Affects Version/s: 2.6.4
    • Component/s: Querying
    • None
    • ALL
      1. connect to a secondary
      2. run db.test.getPlanCache().listQueryShapes()
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Trying to run db.collection.getPlanCache().listQueryShapes() or

      db.runCommand( { planCacheListQueryShapes : "collection" } ) 

      on a Secondary will result in:

      Error: not master at src/mongo/shell/collection.js:1571
      

      or

      { "note" : "from execCommand", "ok" : 0, "errmsg" : "not master" }
      

      Even if rs.slaveOK() is set

            Assignee:
            David Storch
            Reporter:
            Andre de Frere
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: