SERVER-15233 allow plan cache commands to run on secondaries is slaveOk explicitly set to true

(cherry picked from commit 77b00970997d13d0758c745e5a94fc79982d4401)

Conflicts:
	src/mongo/s/commands/cluster_plan_cache_cmd.cpp