src/mongo/db/commands/plan_cache_commands.cpp
@@ -136,6 +136,10 @@ namespace mongo {
         return false;
     }
 
+    bool PlanCacheCommand::slaveOverrideOk() const {
+        return true;
+    }
+
     void PlanCacheCommand::help(stringstream& ss) const {
         ss << helpText;
     }
